# Universal-Agent-Manager

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  STYLE_CODING_RULES.txt  build_gui_selector.ps1  build_gui_selector.sh  build_local.cmd  build_provider_builds.cmd  build_provider_builds.sh  build_select_provider.sh  fix_trim.py  imgui.ini  run_performance_test.ps1  run_uam.sh
.gemini/Failures/: GeminiFailures.md  UserFailures.md
.gemini/Lessons/: GeminiLessons.md  UserLessons.md
.github/workflows/: build-matrix.yml
.vectorised_rag/: uam_aefd0c63f7ae17b8.sqlite3  uam_aefd0c63f7ae17b8.sqlite3-journal  uam_e61e186c15d9d511.sqlite3
UI-V2/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
UI-V2/src/: App.tsx  index.css  main.tsx
assets/: app_icon.icns
build_codex/: CMakeCache.txt
build_core_polish/: CMakeCache.txt
build_hotfix/: CMakeCache.txt
build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake
build_tests/: CMakeCache.txt
build_tests19/: CMakeCache.txt
build_tests_clean/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  uam_core_tests.vcxproj  uam_core_tests.vcxproj.filters  universal_agent_manager.sln  universal_agent_manager.vcxproj  universal_agent_manager.vcxproj.filters
build_tests_clean/Debug/: imgui.ini
build_tests_local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  uam_core_tests
build_verify/: CMakeCache.txt
build_windows_parity/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  uam_core_tests
chats/: chat-1.json
cmake/: check_platform_ifdefs.cmake
docs/: security-enterprise.md  visual-studio-solution.md
docs/architecture/: architecture_1.mmd  architecture_2.mmd
src/: main.cpp
src/app/: application.cpp  application.h  application_core_helpers.cpp  application_core_helpers.h  application_support.cpp  chat_domain_service.cpp  chat_domain_service.h  chat_lifecycle_service.cpp  chat_lifecycle_service.h  memory_library_service.cpp  memory_library_service.h  memory_service.cpp  memory_service.h  native_session_link_service.cpp  native_session_link_service.h  persistence_coordinator.cpp  persistence_coordinator.h  provider_profile_migration_service.cpp  provider_profile_migration_service.h  provider_resolution_service.cpp  provider_resolution_service.h  runtime_local_service.cpp  runtime_local_service.h  runtime_orchestration_services.cpp  (+5 more)
subprojects/ollama_engine/: .gitignore  CMakeLists.txt  LICENSE  README.md
subprojects/ollama_engine/.deterministic_rag/: eval_C-Plus-Plus.sqlite3  eval_Catch2.sqlite3  eval_abseil-cpp.sqlite3  eval_benchmark.sqlite3  eval_folly.sqlite3  eval_googletest.sqlite3  eval_nanobench.sqlite3
subprojects/ollama_engine/evaluation/index_corpus/C-Plus-Plus/dynamic_programming/: 0_1_knapsack.cpp.md
subprojects/ollama_engine/evaluation/index_corpus/C-Plus-Plus/graph/: dijkstra.cpp.md
subprojects/ollama_engine/evaluation/index_corpus/C-Plus-Plus/others/: lru_cache.cpp.md
subprojects/ollama_engine/evaluation/index_corpus/C-Plus-Plus/sorting/: quick_sort.cpp.md
subprojects/ollama_engine/evaluation/index_corpus/Catch2/src/catch2/: catch_test_macros.hpp.md
subprojects/ollama_engine/evaluation/index_corpus/Catch2/src/catch2/benchmark/: catch_benchmark.hpp.md
subprojects/ollama_engine/evaluation/index_corpus/abseil-cpp/absl/container/: flat_hash_map.h.md
subprojects/ollama_engine/evaluation/index_corpus/abseil-cpp/absl/memory/: memory.h.md
subprojects/ollama_engine/evaluation/index_corpus/abseil-cpp/absl/strings/: string_view.h.md
subprojects/ollama_engine/evaluation/index_corpus/benchmark/include/benchmark/: benchmark.h.md  registration.h.md
subprojects/ollama_engine/evaluation/index_corpus/benchmark/test/: basic_test.cc.md  fixture_test.cc.md  register_benchmark_test.cc.md
subprojects/ollama_engine/evaluation/index_corpus/folly/folly/: AtomicHashMap.h.md  Optional.h.md
subprojects/ollama_engine/evaluation/index_corpus/folly/folly/container/: FBVector.h.md
subprojects/ollama_engine/evaluation/index_corpus/googletest/googletest/include/gtest/: gtest.h.md
subprojects/ollama_engine/evaluation/index_corpus/googletest/googletest/src/: gtest.cc.md
subprojects/ollama_engine/evaluation/index_corpus/nanobench/src/include/: nanobench.h.md
subprojects/ollama_engine/evaluation/results/: latest_results.json  repo_manifest.json
subprojects/ollama_engine/include/ollama_engine/: cli_modes.h  engine_api.h  engine_factory.h  engine_interface.h  engine_structures.h
subprojects/ollama_engine/src/: engine_factory.cpp  ollama_engine_bridge_main.cpp  ollama_engine_cli_auto_test_main.cpp  ollama_engine_cli_autotune.cpp  ollama_engine_cli_autotune_internal.h  ollama_engine_cli_common.cpp  ollama_engine_cli_common_internal.h  ollama_engine_cli_custom_tests_main.cpp  ollama_engine_cli_eval_suite_main.cpp  ollama_engine_cli_finetune_wizard_main.cpp  ollama_engine_cli_main.cpp  ollama_engine_cli_modes.cpp  ollama_engine_cli_tests.cpp  ollama_engine_cli_tests_internal.h
subprojects/ollama_engine/src/bridge/: bridge_cli_args.h  bridge_common.h  bridge_http.h  bridge_json.h  bridge_runtime.h  bridge_tool_envelope.h
subprojects/ollama_engine/src/internal/: embedding_utils.cpp  embedding_utils.h  local_ollama_engine.cpp  local_ollama_engine.h
subprojects/ollama_engine/src/internal/determanistic_hash/: determanistic_hash.cpp  determanistic_hash.h
subprojects/ollama_engine/src/internal/local_ollama_engine/: execution.cpp  generation_helpers.cpp  local_ollama_engine_private.h  rag_runtime.cpp  token_classification.cpp
subprojects/ollama_engine/src/internal/vectorised_rag/: vectorised_rag.cpp  vectorised_rag.h  vectorised_rag_chunk_extraction.h  vectorised_rag_common.h  vectorised_rag_embedding.h  vectorised_rag_lifecycle.inl  vectorised_rag_retrieval.h  vectorised_rag_retrieval.inl  vectorised_rag_source_resolution.h  vectorised_rag_sqlite_persistence.h
tests/: core_tests.cpp
(+359 files in other folders)
